# public/swagger.json
@@ -38,6 +38,10 @@
 					},
 					"console": {
 						"$ref": "#/components/schemas/ConsoleDTO"
+					},
+					"console_id": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
@@ -81,6 +85,36 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateGame",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GameDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GameDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/games/{id}": {
