# src/controllers/game.controller.ts
@@ -1,4 +1,4 @@
-import {Body, Controller, Get, Path, Route, Tags} from "tsoa";
+import {Body, Controller, Get, Path, Post, Route, Tags} from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
 
@@ -8,6 +8,14 @@ export class GameController extends Controller {
   @Get("/")
   public async getAllGames(): Promise<GameDTO[]> {
     return gameService.getAllGames();
+  }
+
+  @Post("/")
+  public async createGame(
+      @Body() requestBody: GameDTO
+  ): Promise<GameDTO> {
+    const { title, console_id } = requestBody;
+    return gameService.createGame(title, console_id);
   }
 
   @Get("{id}")
